--- a/config/west.yml
+++ b/config/west.yml
@@ -9,5 +9,8 @@ manifest:
       remote: zmkfirmware
       revision: main
       import: app/west.yml
+    - name: mouseemulation
+      url: https://github.com/ftc/
+      revision: mouse-ftc
   self:
     path: config
