--- a/config/west.yml
+++ b/config/west.yml
@@ -2,6 +2,8 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
+    - name: urob
+      url-base: https://github.com/urob
     - name: dhruvinsh
       url-base: https://github.com/dhruvinsh
     # Additional modules containing boards/shields/custom code can be listed here as well
@@ -13,6 +15,9 @@ manifest:
       import: app/west.yml
     - name: zmk-num-word
       remote: dhruvinsh
+      revision: main
+    - name: zmk-helpers
+      remote: urob
       revision: main
   self:
     path: config
